k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: chat-app
  labels:
    app: chat-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: chat-frontend
          image: nguyenduy2004/chat-app-frontend:latest
          ports:
            - containerPort: 80
